Run on EMR / Spark 3.5.5. WIP
Signed-off-by: Julien Nioche <julien@digitalpebble.com>