@@ -15,6 +15,7 @@ import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public abstract class Utils {
 
@@ -44,7 +45,7 @@ public abstract class Utils {
             }
 
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream))) {
-                return reader.lines().toList();
+                return reader.lines().collect(Collectors.toList());
             }
         }
     }
